chore: update openapi spec
